# Josiah-Chess

./: CMakeLists.txt  README.md  WAC_test.py  datagen_orchestrator.py  doc.md
include/: datagen.h  evaluate.h  magic.h  movegen.h  position.h  search.h  tbconfig.h  tbprobe.h  uci.h  zobrist.h
nnue/: 768_model_float.nnue  768_model_float_9_18.nnue  768_model_quant_9_18.nnue  768_model_quant_9_18_torch.nnue  768_quant_9_18_50_1024.nnue  768_quant_9_18_50_1024_v2.nnue  inference.c  inference.h
src/: bitboard.c  datagen.c  evaluate.c  magic.c  main.c  movegen.c  perft.c  position.c  search.c  tbprobe.c  uci.c  zobrist.c
